# HammerEngine

./: README.md  build.sh  compile_Shaders  setup_and_build.bat
.github/: pull_request_template.md
.github/workflows/: cmake-multi-platform.yml
demo/2d_colliders/: CMakeLists.txt  test.cpp
demo/2d_world/: CMakeLists.txt  test.cpp
demo/2d_world/shaders/: vert.spv
demo/3d_colliders/: test.cpp
demo/3d_model/: test.cpp
demo/3d_model/shaders/: frag.frag  frag.spv  vert.vert
demo/3d_world/: CMakeLists.txt  test.cpp
demo/3d_world/shaders/: frag.frag  frag.spv
demo/3d_world_moveMesh/: CMakeLists.txt  test.cpp
demo/3d_world_moveMesh/shaders/: frag.frag  frag.spv
docs/: Tutorial2d.md
include/HammerEngine/: HammerEngine.h  HammerRect.h
scr/: HammerBuffers.cpp  HammerEngine.cpp  HammerPipeline.cpp  HammerRect.cpp
src/: HammerBuffers.cpp  HammerCamera.cpp  HammerEngine.cpp  HammerPipeline.cpp  HammerRect.cpp  HammerUtility.cpp
tests/3d_colliders/: test.cpp
