# Copyright (c) 2026 MidnightHammer-code
# This source code is licensed under the GPL 3.0 license
# LICENSE file in the root directory of this source tree.

cmake_minimum_required(VERSION 3.10)

project(voxel_Engine VERSION 2.0)

set(SOURCE_FILES
    test.cpp
    ../../src/HammerEngine.cpp
    ../../src/HammerUtility.cpp
    ../../src/HammerCamera.cpp
    ../../src/HammerRect.cpp
    ../../src/HammerBuffers.cpp
    ../../src/HammerPipeline.cpp
)

find_package(Vulkan REQUIRED)
find_package(glm REQUIRED)

find_package(glfw3 REQUIRED)

include_directories(
    ${GLFW3_INCLUDE_DIRS}
    ${GLM_INCLUDE_DIRS}
)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})

target_link_libraries(${PROJECT_NAME}
    vulkan
    glfw
    stb
)
